--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -10,7 +10,7 @@
    b. Header Styles
    c. About Section
    d. LFG Section
-   e. Portfolio Section
+   e. Services Section
    f. Call To Action Section
    g. Testimonials Section
    h. Contact Section
@@ -408,26 +408,32 @@ ul#nav li.current a { color: #fe6928; }
 }  */
 
 /* ------------------------------------------------------------------ */
-/* e. Portfolio Section
+/* e. Services Section
 /* ------------------------------------------------------------------ */
 
-#portfolio {
+#services {
    background: #ebeeee;
    padding-top: 90px;
    padding-bottom: 60px;
 }
-#portfolio h1 {
-   font: 15px/24px 'opensans-semibold', sans-serif;
-   text-transform: uppercase;
-   letter-spacing: 1px;
+#services .center {
+   background: red;
+   display: flex;
+   align-content: center;
+
+}
+#services h1 {
+   font: 22px/30px 'opensans-bold', sans-serif;
+   /* color: #fff; */
    text-align: center;
-   margin-bottom: 48px;
-   color: #95A3A3;
+
+   margin-bottom: 12px;
+   color: #00608A;
 }
 
-/* Portfolio Content */
-#portfolio-wrapper .columns { margin-bottom: 36px; }
-.portfolio-item .item-wrap {
+/* Services Content */
+#services-wrapper .columns { margin-bottom: 36px; }
+.services-item .item-wrap {
    background: #fff;
    overflow: hidden;
    position: relative;
@@ -438,13 +444,13 @@ ul#nav li.current a { color: #fe6928; }
 	-ms-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
-.portfolio-item .item-wrap a {
+.services-item .item-wrap a {
    display: block;
    cursor: pointer;
 }
 
 /* overlay */
-.portfolio-item .item-wrap .overlay {
+.services-item .item-wrap .overlay {
    position: absolute;
    left: 0;
    top: 0;
@@ -462,7 +468,7 @@ ul#nav li.current a { color: #fe6928; }
 
    background: url(../images/overlay-bg.png) repeat;
 }
-.portfolio-item .item-wrap .link-icon {
+.services-item .item-wrap .link-icon {
    display: block;
    color: #fff;
    height: 30px;
@@ -486,27 +492,27 @@ ul#nav li.current a { color: #fe6928; }
    margin-left: -15px;
    margin-top: -15px;
 }
-.portfolio-item .item-wrap img {
+.services-item .item-wrap img {
    vertical-align: bottom;
 }
-.portfolio-item .portfolio-item-meta { padding: 18px }
-.portfolio-item .portfolio-item-meta h5 {
+.services-item .services-item-meta { padding: 18px }
+.services-item .services-item-meta h5 {
    font: 14px/21px 'opensans-bold', sans-serif;
    color: #fff;
 }
-.portfolio-item .portfolio-item-meta p {
+.services-item .services-item-meta p {
    font: 12px/18px 'opensans-light', sans-serif;
    color: #c6c7c7;
    margin-bottom: 0;
 }
 
 /* on hover */
-.portfolio-item:hover .overlay {
+.services-item:hover .overlay {
 	opacity: 1;
 	-moz-opacity: 1;
 	filter:alpha(opacity=100);
 }
-.portfolio-item:hover .link-icon {
+.services-item:hover .link-icon {
    opacity: 1;
 	-moz-opacity: 1;
 	filter:alpha(opacity=100);
