--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -252,9 +252,9 @@
    #call-to-action p { font-size: 15px; }
 
 
-   /* Portfolio Section
+   /* Services Section
    /* ----------------------------------------------------------------- */
-   #portfolio-wrapper .columns { margin-bottom: 40px; }
+   #services-wrapper .columns { margin-bottom: 40px; }
    .popup-modal {	max-width: 85%; }
 
 
